# cci-develop

./: README.md
cci-c99/: Makefile  README.md  default.workspace  default.workspace.layout  gmon.out  read_trace_log.sh  tags
cci-c99/cci/: cci_memory_utils.c  cci_mini_assert.c  cci_mini_except.c  cci_mini_list.c  cci_mini_stack.c  cci_mini_trace.c  cci_utils.c
cci-c99/cci-codeblocks/: cci-codeblocks.cbp  cci-codeblocks.depend  cci-codeblocks.layout
cci-c99/cci-codeblocks-service/: cci-codeblocks-service.cbp  cci-codeblocks-service.layout
cci-c99/cci-codeblocks-test/: cci-codeblocks-test.cbp
cci-c99/cci-codeblocks-utils/: cci-codeblocks-utils.cbp  cci-codeblocks-utils.depend
cci-c99/cci-kafka-util/: CMakeLists.txt
cci-c99/cci-kafka-util/include/: cci_cli_dictionary.h  (+1 more)
cci-c99/cci-kafka-util/src/: .cci_mini_kafka.c.swp  CMakeLists.txt  cci_cli_dictionary.c  cci_mda_utils.c  cci_mini_kafka.c  mini_kafka_run.c
cci-c99/cci/fuser/: CMakeLists.txt  cci_mini_fuser.c  mini_fuser_run.c
cci-c99/cci/mini-rpc/shared/: CMakeLists.txt
cci-c99/cci/mini-rpc/src/: CMakeLists.txt  cci_mini_clang_rpc.c  cci_mini_clang_rpc.h  cci_mini_rpc_run.c  cci_mini_rpc_types.c  cci_mini_rpc_types.h
cci-c99/cci_kafka_ext/: .gitignore  CMakeLists.txt
cci-c99/cci_kafka_ext/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cci_daemon.c  cci_kafka_async_q.c  cci_kafka_q_dispatch.c  cci_kafka_sink.c  cci_mini_kafka.c  cci_rdkafka_py_wrap.c  cmake_install.cmake  test.c
cci-c99/test/: chromatic_c_test.c
cci-cpp-expansion/: .gitignore  CMakeLists.txt  cci_concurrent_run.cpp  cci_exp_run.cpp
cci-cpp-expansion/include/: cci_complexity.h  cci_concurrent_utils.h  cci_generic.h  cci_numeric_utils.h  cci_opt_utils.h  cci_test_expansion.h
cci-cpp-expansion/test/: CMakeLists.txt  test_cci_numeric_utils.cpp
cci-cpp-stream/: CMakeLists.txt  README.md
cci-cpp-stream/cassandra/: README.md
cci-cpp-stream/cci_trinity_tunnel/: CMakeLists.txt  cci_trinity_tunnel.cpp
cci-cpp-stream/cci_trinity_tunnel/include/: cci_time_utils.h  cci_trinity_options.h  cci_trinity_tunnel.h
cci-cpp-stream/cci_trinity_tunnel/py/: trinity_cpp.py
cci-cpp-stream/cci_trinity_tunnel/src/: CMakeLists.txt  cci_trinity_bridge.cpp  cci_trinity_options.cpp  cci_trinity_tunnel.cpp
cci-cpp-stream/curlpp/: CMakeLists.txt
cci-cpp-stream/curlpp/src/: .CMakeLists.txt.swp  CMakeLists.txt  cci_curl_stream.cpp  cci_mini_curl_run.cpp
cci-cpp-stream/dht/: CMakeLists.txt
cci-cpp-stream/dht/src/: CMakeLists.txt  cci_dht_stream.cpp  cci_mini_dht_run.cpp
cci-cpp-stream/fuse/: README.md
cci-cpp-stream/include/: .cci_kafka_preamble.hpp.swp  cci_curl_preamble.hpp  cci_curl_stream.h  cci_curl_stream_t.h  cci_dht_stream.h  cci_kafka_preamble.hpp  cci_kafka_stream.h  cci_kafka_t.h  cci_stream_event.h  cci_stream_generic.h  cci_time_utils.h  cci_web_skt_stream.hpp  json.hpp
cci-cpp-stream/kafka/: .gitignore  CMakeLists.txt  cci_kafka_consumer.cpp  cci_kafka_preamble.cpp  cci_kafka_producer.cpp  cci_kafka_stream.cpp  cci_kafka_utils.cpp  cci_mini_kafka_run.cpp
cci-cpp-stream/rabbit/: README.md
cci-cpp-stream/stream_event/src/: CMakeLists.txt  cci_mini_stream_event.cpp  cci_stream_event.cpp
cci-cpp-stream/web-skt/: .CMakeLists.txt.swp  CMakeLists.txt
cci-cpp-stream/web-skt/src/: .CMakeLists.txt.swp  .cci_mini_web_skt_run.cpp.swp  CMakeLists.txt  cci_mini_web_skt_run.cpp  cci_web_skt_stream.cpp
cci-cpp-stream/zookeeper/: README.md
cci-cpp-stream/zookeeper/cci-curator/gen-cpp/: CMakeCache.txt  CMakeLists.txt  CuratorService.cpp  CuratorService.h  CuratorService_server.skeleton.cpp  DiscoveryService.cpp  DiscoveryService.h  DiscoveryServiceLowLevel.cpp  DiscoveryServiceLowLevel.h  DiscoveryServiceLowLevel_server.skeleton.cpp  DiscoveryService_server.skeleton.cpp  EventService.cpp  EventService.h  EventService_server.skeleton.cpp  Makefile  cci-curator.cpp  cci_curator_rpc.cpp  cci_curator_stream.h  cmake_install.cmake  curator_constants.cpp  curator_constants.h  curator_types.cpp  curator_types.h
cci-cpp-stream/zookeeper/cci-curator/gen-cpp/gen-cpp/: Makefile  cci-curator  cmake_install.cmake
cci-mobile/: .gitignore  .keystore
cci-mobile-no-qp/: .gitignore  README.md
cci-mobile-no-qp/arzamas/: kingconsole.kv  main.py
cci-mobile-no-qp/bimini/: bimini.kv  main.py
cci-mobile-no-qp/cci-bootstrap/: CMakeLists.txt
cci-mobile-no-qp/cci-bootstrap/src/: CMakeLists.txt  cci_bootstrap.c  cci_bootstrap.py  cci_daemon.c  cci_daemon.h
cci-mobile-no-qp/king_console/: main.py
cci-mobile-no-qp/trinity/: application.py  application_vulture.py  cci-bootstrap  cci-bootstrap-vulture.py  cci-bootstrap.py  cci_trinity.py  cci_trinity_async.py  ccitrinity.kv  main.py  main_.py
cci-mobile/bimini/: bimini.kv  buildozer.spec  main.py  remotedesktop.kv
cci-mobile/clk/: clock.kv
cci-mobile/configures/: configures.kv  main.py
cci-mobile/keystore/: cci-maelstrom.keystore
cci-mobile/keystores/: chromatic_universe.keystore
cci-mobile/king_console/: king_console.sqlite  kingconsole.kv  main.py  qpyenv.sh
cci-mobile/maelstrom/: maelstrom.kv  main.py  ping.py  sub.py
cci-mobile/orangutan/: .gitignore  mkdevinfo  orng-dev  orng.c  su
cci-mobile/settings/: android.txt  main.py
cci-mobile/trinity/: application.py  cci-trinity.py  cci_trinity.py  cci_trinity_async.py  ccitrinity.kv  foo.py  kiel_test.py  king_console.sqlite  main.py  mongo.api  requirements.txt  tor.py  trinity.py
cci-mobile/urnack/: main.py  urnack.kv
cci-objectpascal/: README.md
cci-python/: .gitignore  README.md
cci-python/cci/: requirements.txt  setup.py
cci-python/cci-moocher/: cci-mooch.py
cci-python/cci_presents/: __init__.py  cci_presents.conf  cci_presents_run.py  cci_uwsgi.ini  default.nginx  default_settings.py  requirements.txt  wsgi.py
cci-python/zonar_blob_detect/: bad_zb_data_exceed_col_file  bad_zb_data_lopsided  readme.md  zb_data  zbd_test.py  zn_blob_detect.py
include/: chromatic_numeric_utils.h  walk_a_baby_ast.h  walk_a_baby_jit.h  walk_a_baby_parse.h
include/cci/: cci.h  cci_assert.h  cci_mini_list.h  cci_mini_stack.h
(+154 files in other folders)
